--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,19 +1,23 @@
-<h2>User Details</h2>
-<div class="container">
-    <table>
-            <tr>
-                <th>Name</th>
-                <th>Email</th>
-                <th>Phone Number</th>
-                <th>Role</th>
-            </tr>
-        <tbody>
-            <tr *ngFor="let user of users">
-                <td>{{user.Username}}</td>
-                <td>{{user.Email}}</td>
-                <td>{{user.Contact}}</td>
-                <td>{{user.Role}}</td>
-            </tr>
-        </tbody>
-    </table>  
+<br><h2>Dashboard</h2>
+<div class="dbpage">
+    <table  mat-table [dataSource]="values" class="mat-elevation-z8" dbTable>
+        <ng-container matColumnDef="position">
+            <th mat-header-cell *matHeaderCellDef> Index </th>
+            <td mat-cell *matCellDef="let element;let i=index"> {{i}} </td>
+
+        </ng-container>
+
+        <ng-container matColumnDef="value">
+            <th mat-header-cell *matHeaderCellDef> Value </th>
+            <td mat-cell *matCellDef="let element"> {{element}} </td>
+
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table><br><br>
+<div class="input">
+<input [(ngModel)]="newValue" placeholder="new Value">
+<button mat-raised-button (click)="addValue()">Add Value</button>
+</div>
 </div>
