--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,10 +1,16 @@
+<br><br><h2 class="pageTitle">Login</h2>
 <form>
-    <h1> Login Form</h1>
-        <div class="container">
-            <label>UserName: </label>
-            <input type="text" placeholder="Enter your name"  name="User name" required><br><br>
-            <label>Password: </label>
-            <input type="password" placeholder="Enter Password" name="password" required><br><br>
-            <button type="submit">Login</button><br>
-        </div>
-</form>        
+    <div>
+        <mat-form-field  appearance="fill">
+            <mat-label >Username : </mat-label>
+            <input matInput [(ngModel)]="username" name="username" type="text" placeholder="Enter your username" required="" ><br><br>
+        </mat-form-field> 
+    </div>
+    <div>
+        <mat-form-field>
+            <mat-label>Password : </mat-label>
+            <input matInput [(ngModel)]="password" name="password" type="password" placeholder="Enter your password" required><br><br>
+        </mat-form-field> 
+    </div><br>
+<button mat-flat-button color="warn" (click)="login()">Login</button><br>
+</form>
